refactor: improve Java version compatibility by replacing modern APIs with legacy alternatives